@@ -1,8 +1,8 @@
 #!/bin/sh
 # control starting, stopping, or restarting amd.
-# usage: ctl-amd [start | stop | restart]
+# usage: ctl-amd [start|stop|status|restart|condrestart|reload]
 #
-# Package:	am-utils-6.0
+# Package:	am-utils-6.1
 # Author:	Erez Zadok <ezk@cs.columbia.edu>
 #
 # chkconfig: - 72 28
@@ -113,6 +113,17 @@ case "$1" in
 	fi
 	;;
 
+'condrestart')
+     if [ -f /var/lock/subsys/amd ]; then
+            ctl-amd stop
+            ctl-amd start
+        fi
+     ;;
+
+'reload')
+        amq -f
+        ;;
+
 'status')
 	# run amq -v to produce status
 	pid=`amq -p 2>/dev/null`
@@ -133,6 +144,6 @@ case "$1" in
 	;;
 
 *)
-	echo "Usage: @sbindir@/ctl-amd [ start | stop | restart | status]"
+	echo "Usage: @sbindir@/ctl-amd [start|stop|status|restart|condrestart|reload]"
 	;;
 esac
