@@ -1,3 +1,8 @@
+2000-10-10  Erez Zadok  <ezk@shekel.mcl.cs.columbia.edu>
+
+	* scripts/ctl-amd.in: add targets condrestart (redhat) and
+	reload.
+
 2000-10-04  Erez Zadok  <ezk@shekel.mcl.cs.columbia.edu>
 
 	* scripts/lostaltmail.in (vrfy_user): ensure that MAILDIR is
